<resources>
    <string name="app_name">SlimPlayer</string>

    <!--Options menu titles -->
    <string name="options_title_settings">Settings</string>
    <string name="options_title_exit">Exit</string>
    <string name="options_title_playlist_add">Add to playlist&#8230;</string>
    <string name="options_title_playlist_add_selected">Add selected to playlist&#8230;</string>
    <string name="options_title_toggle_repeat">Toggle repeat</string>
    <string name="options_title_accept_selected">Confirm selected songs</string>
    <string name="options_title_cancel_selected">Cancel selected songs</string> <!-- This one is used when we are adding songs to playlist -->
    <string name="options_title_delete_item">Delete</string>
    <string name="options_title_cancel_selection">Cancel selection</string>


    <!--Titles used in settings screen -->
    <string name="pref_title_tabs">Available screens</string>
    <string name="pref_title_home">Home screen</string>
    <string name="pref_title_all">All songs screen</string>
    <string name="pref_title_playlists">Playlists screen</string>
    <string name="pref_title_albums">Albums screen</string>
    <string name="pref_title_artists">Artists screen</string>
    <string name="pref_title_genres">Genres screen</string>

    <string name="pref_title_rescan">Start storage scanning</string>

    <string name="pref_title_autoplay">Auto play last song on start-up</string>

    <string name="pref_title_player_engine">Select internal player&#8230;</string>

    <string name="pref_title_visualization">Display audio visualization</string>

    <!--Keys used in preferences and possibly in some other cases-->
    <string name="pref_key_tabs">pref_key_tabs</string>

    <string name="pref_key_home_screen">home_screen</string>
    <string name="pref_key_all_screen">all_screen</string>
    <string name="pref_key_playlists_screen">playlists_screen</string>
    <string name="pref_key_albums_screen">albums_screen</string>
    <string name="pref_key_artists_screen">artists_screen</string>
    <string name="pref_key_genres_screen">genres_screen</string>

    <string name="pref_key_directories_set">pref_key_directories_set</string>

    <string name="pref_key_rescan">pref_key_rescan</string>

    <string name="pref_key_repeat">pref_key_repeat</string>

    <string name="pref_key_empty_genres">pref_key_empty_genres</string>

    <string name="pref_key_playlist_number">pref_key_playlist_number</string>

    <string name="pref_key_autoplay">pref_key_autoplay</string>

    <string name="pref_key_player_engine">pref_key_player_engine</string>

    <string name="pref_key_visualization">pref_key_visualization</string>

    <string name="pref_key_first_run">pref_key_first_run</string>


    <!-- There are also some other keys defined as constants in project files-->



    <!--Directory select dialog -->
    <string name="directory_pref_button_select">Select...</string>
    <string name="directory_pref_button_delete">Delete</string>

    <!--Directory select dialog -->
    <string name="directory_dialog_title">Select directory containing song files</string>
    <string name="directory_dialog_button_select">Select directory</string>
    <string name="directory_dialog_button_cancel">Cancel</string>


    <!--Add to playlist screen-->
    <string name="playlist_create">Create new playlist...</string>
    <string name="playlist_default_name">New Playlist</string>
    <string name="playlist_add_succes">songs added to playlist.</string>

    <!--Icon codes-->
    <string name="icon_play">\uE800</string>
    <string name="icon_stop">\uE801</string>
    <string name="icon_pause">\uE802</string>
    <string name="icon_previous">\uE803</string>
    <string name="icon_next">\uE804</string>
    <string name="icon_close">\uE805</string>

    <!--File names of icon bitmaps-->
    <string name="bitmap_play">play.bmp</string>
    <string name="bitmap_stop">stop.bmp</string>
    <string name="bitmap_pause">pause.bmp</string>
    <string name="bitmap_previous">previous.bmp</string>
    <string name="bitmap_next">next.bmp</string>
    <string name="bitmap_close">close.bmp</string>

    <!--Empty screen texts-->
    <string name="empty_placeholder">Nothing to be found here...</string>
    <string name="empty_main_screen">None of the song list screens are turned on to show, click here to review your preferences</string>
    <string name="empty_list">A problem occurred with data loading</string>
    <string name="empty_connection_failed">Failed to connect to media</string>
    <string name="empty_connection_suspended">A problem occurred while connecting to media</string>

    <!--Toast texts-->
    <string name="toast_playlist_exists">Playlist with that name already exists</string>
    <string name="toast_playlist_create_failed">Could not create playlists</string>
    <string name="toast_exit_confirm">Press back again to exit</string>
    <string name="toast_items_deleted">items deleted</string>
    <string name="toast_rescan_storage">Started scanning internal storage for new songs</string>
    <string name="toast_rescan_directories">Started scanning selected directories for new songs</string>

    <!-- Used as display name in home screen-->
    <string name="home_screen_title">Home</string>
    <string name="all_songs_screen_title">All songs</string>
    <string name="playlists_screen_title">Playlists</string>
    <string name="albums_screen_title">Albums</string>
    <string name="artists_screen_title">Artists</string>
    <string name="genres_screen_title">Genres</string>

    <!-- Default text-->
    <string name="hello_blank_fragment">Nothing to show</string>

    <!-- Notification player titles -->
    <string name="title_play_previous">Play previous</string>
    <string name="title_play_next">Play nexts</string>
    <string name="title_play">Play</string>
    <string name="title_pause">Pause</string>

    <!--Titles -->
    <string name="music_title">Music</string>

    <!-- Add playlist dialog -->
    <string name="add_playlist_title">Create new playlist</string>
    <string name="add_playlist_message">Please enter playlist name</string>

    <!--Buttons-->
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>

    <!--Permission explanations-->
    <string name="permission_storage_explanation">Access to storage is needed for the ability to play music</string>
    <string name="record_audio_explanation">Access to all audio channels which including microphone is needed for visualization to work.
        You can continue using player without visualization if you choose so</string>

    <!--Missing permission message-->
    <string name="permission_storage_none">Please allow storage permissions in your phone settings
        (Settings -> Apps -> SlimPlayer -> Permissions)
    </string>


    <!-- Internal player codes -->
    <string name="code_media_player">1</string>
    <string name="code_vitamio_player">2</string>
    <string name="code_exo_player">3</string>


    <!--General UI texts-->
    <string name="selected">selected</string>
    <string name="add_to_playlist_title">Add songs to playlist</string>

</resources>
