<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/test_activity"
        android:title="Start test activity"
        />-->
    <item
        android:id="@+id/cancel_selection"
        android:icon="@drawable/ic_do_not_disturb_alt_white_24dp"
        android:title="@string/options_title_playlist_add_selected"
        android:visible="false"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/playlist_add"
        android:title="@string/options_title_playlist_add_selected"
        android:visible="false"
        />
    <item
        android:id="@+id/playlist_create"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/playlist_create"
        android:visible="false"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/delete_item"
        android:title="@string/options_title_delete_item"
        android:visible="false"
        />
    <item
        android:id="@+id/settings"
        android:title="@string/options_title_settings"
        />
    <item
        android:id="@+id/exit"
        android:title="@string/options_title_exit"
        />
</menu>