<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <ImageView
        android:layout_margin="0dp"
        android:id="@+id/notification_icon"
        android:layout_width="@dimen/notification_icon_size"
        android:layout_height="@dimen/notification_icon_size"
        android:src="@mipmap/ic_launcher" />


    <TextView
        android:id="@+id/notification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Song Title"
        android:textSize="14sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/notification_icon"
        android:layout_toEndOf="@+id/notification_icon"
        android:layout_marginLeft="@dimen/notification_icon_margin"
        android:layout_marginTop="@dimen/notification_icon_margin" />

    <mihaljevic.miroslav.foundry.slimplayer.IconButton
        android:id="@+id/notification_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_close"
        android:padding="0dp"
        android:textSize="14sp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/notification_icon_margin"
        android:layout_marginRight="@dimen/notification_icon_margin" />

    <mihaljevic.miroslav.foundry.slimplayer.IconButton
        android:id="@+id/notification_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_previous"
        android:padding="0dp"
        android:textSize="14sp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/notification_icon"
        android:layout_toEndOf="@+id/notification_icon"
        android:layout_marginLeft="@dimen/notification_icon_margin"
        android:layout_marginBottom="@dimen/notification_icon_margin" />

    <!--Small bit of dirty fix to center the button-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/notification_previous"
        android:layout_toLeftOf="@+id/notification_next">

        <mihaljevic.miroslav.foundry.slimplayer.IconButton
            android:id="@+id/notification_play"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_play"
            android:padding="0dp"
            android:textSize="14sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@null"
            android:layout_marginBottom="@dimen/notification_icon_margin" />
    </FrameLayout>


    <mihaljevic.miroslav.foundry.slimplayer.IconButton
        android:id="@+id/notification_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_next"
        android:padding="0dp"
        android:textSize="14sp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/notification_icon_margin"
        android:layout_marginRight="@dimen/notification_icon_margin" />

</RelativeLayout>